--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,9 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
+            - run: npm audit
             - run: npm test
-workflows:
+# workflows:
     build-and-test:
       jobs:
         - build-and-test
