--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
             - run: npm install
             - run: npm audit
             - run: npm test
-# workflows:
+workflows:
     build-and-test:
       jobs:
         - build-and-test
