--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,14 @@ jobs:
             - run: npm install
             - run: npm audit
             - run: npm test
+  deploy:
+    steps:
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command:
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+     
 workflows:
     build-and-test:
       jobs:
