--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Deploy Master to Heroku
           command:
-            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master 
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$FAIRY_CIRCLE_API.git master 
   # deploy:
   #   steps:
   #     - checkout
