--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
+  jira: circleci/jira@1.1.7
 jobs:
   build-and-test:
     executor:
@@ -16,14 +17,11 @@ jobs:
           name: Deploy Master to Heroku
           command:
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$FAIRY_CIRCLE_API.git master 
-  # deploy:
-  #   steps:
-  #     - checkout
-  #     - run:
-  #         name: Deploy Master to Heroku
-  #         command:
-  #           git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master 
+  
 workflows:
     build-and-test:
       jobs:
         - build-and-test
+        -  build:
+          post-steps:
+            - jira/notify
