--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "knex": "^0.21.1",
+    "morgan": "~1.9.1",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "mocha": "^8.0.1"
