--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,15 +15,12 @@ jobs:
             - run: npm audit --audit-level=moderate
             - run: npm test 
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
     heroku_deploy:
       jobs:
-        - build
+        - build-and-test
         - heroku/deploy-via-git:
           requires:
-            - build # only run deploy-via-git job if the build job has completed
+            - build-and-test # only run deploy-via-git job if the build job has completed
           filters:
             branches:
               only: master # only run deploy-via-git job on master branch
