--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@1.1.6
   jira: circleci/jira@1.1.7
-  heroku: circleci/heroku@0.0.10.
+  heroku: circleci/heroku@1.0.1
 jobs:
   build-and-test:
     executor:
@@ -19,8 +19,8 @@ workflows:
       jobs:
         - build-and-test
         - heroku/deploy-via-git:
-          requires:
-            - build-and-test # only run deploy-via-git job if the build job has completed
-          filters:
-            branches:
-              only: master # only run deploy-via-git job on master branch
+            requires:
+              - build-and-test # only run deploy-via-git job if the build job has completed
+            filters:
+              branches:
+                only: master # only run deploy-via-git job on master branch
