add jira orb and basic job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,3 +24,5 @@ workflows:
             filters:
               branches:
                 only: master # only run deploy-via-git job on master branch
+            post-steps:
+              - jira/notify
